Made some changes