@@ -7,6 +7,7 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Data
 @Builder
@@ -27,8 +28,19 @@ public class DeskDto {
         .id(desk.getId())
         .name(desk.getName())
         .description(desk.getDescription())
-        .tasks(desk.getTasks().stream().map(TaskDto::of).toList())
+        .tasks(desk.getTasks().stream().map(TaskDto::of).collect(Collectors.toList()))
         .build();
+  }
+
+  public Desk toDomain() {
+    Desk desk = Desk.builder()
+        .id(id)
+        .name(name)
+        .description(description)
+        .build();
+    desk.setTasks(tasks.stream().map(taskDto -> taskDto.toDomain(desk)).collect(Collectors.toSet()));
+
+    return desk;
   }
 
 }
